--- a/login.css
+++ b/login.css
@@ -13,14 +13,14 @@ section{
     align-items: center;
     min-height: 100vh;
     width: 100%;
-    background: linear-gradient(190deg, rgba(22,125,127,1) 0%, rgba(221,255,231,1) 60%);
+    background: linear-gradient(90deg,  #0f68a9 0%,#86f7a4 100%);
 }
 .form-box{
     position: relative;
     width: 400px;
     height: 450px;
     background: transparent;
-    border: 2px solid #167D7F;
+    border: 2px solid #ffffff;
     border-radius: 20px;
     backdrop-filter: blur(15px);
     display: flex;
@@ -30,21 +30,21 @@ section{
 }
 h2{
     font-size: 2em;
-    color: #0c0b0b;
+    color: #ffffff;
     text-align: center;
 }
 .inputbox{
     position: relative;
     margin: 30px 0;
     width: 310px;
-    border-bottom: 2px solid #0e0e0e;
+    border-bottom: 2px solid #ffffff;
 }
 .inputbox label{
     position: absolute;
     top: 50%;
     left: 5px;
     transform: translateY(-50%);
-    color: #080808;
+    color: #ffffff;
     font-size: 1em;
     pointer-events: none;
     transition: .5s;
@@ -61,19 +61,19 @@ top: -5px;
     outline: none;
     font-size: 1em;
     padding:0 35px 0 5px;
-    color: #100f0f;
+    color: #ffffff;
 }
 .inputbox ion-icon{
     position: absolute;
     right: 8px;
-    color: #000000;
+    color: #ffffff;
     font-size: 1.2em;
     top: 20px;
 }
 .forget{
     margin: -15px 0 15px ;
     font-size: .9em;
-    color: #0c0c0c;
+    color: #ffffff;
     display: flex;
     justify-content: space-between;  
 }
@@ -83,7 +83,7 @@ top: -5px;
     
 }
 .forget label a{
-    color: #161ccc;
+    color: #ffffff;
     text-decoration: none;
 }
 .forget label a:hover{
@@ -93,7 +93,7 @@ button{
     width: 100%;
     height: 40px;
     border-radius: 40px;
-    background: #29A0B1;
+    background: #ffffff;
     border: none;
     outline: none;
     cursor: pointer;
@@ -102,13 +102,13 @@ button{
 }
 .register{
     font-size: .9em;
-    color: #131313;
+    color: #ffffff;
     text-align: center;
     margin: 25px 0 10px;
 }
 .register p a{
     text-decoration: none;
-    color: #2a31fc;
+    color: #3339e9;
     font-weight: 600;
 }
 .register p a:hover{
